--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -51,8 +51,8 @@
                         <TextBox x:Name="tbDoneOnTrip" Height="135" Canvas.Left="449" TextWrapping="Wrap" Text="" Canvas.Top="173" Width="300" Background="Black" Foreground="White"/>
                         <TextBox x:Name="TbDaysOff" Height="23" Canvas.Left="191" TextWrapping="Wrap" Text="" Canvas.Top="24" Width="38" Background="Black" Foreground="White"/>
                         <ComboBox x:Name="CbCountries" Canvas.Left="234" Canvas.Top="191" Width="172" SelectionChanged="CbCountries_SelectionChanged" Height="25"/>
-                        <Button x:Name="BtnSaveReceipt" Content="Spara Kvitto                             " Canvas.Left="165" Canvas.Top="473" Width="88" RenderTransformOrigin="0.77,2.2" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="5,1,1,1" Click="Button_Click_1" Height="21"/>
-                        <Button x:Name="btnUploadReceipt" Content="Bläddra" Canvas.Top="399" Width="88" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Click="btnUploadReceipt_Click" RenderTransformOrigin="0.566,-2.278" Canvas.Left="165"/>
+                        <Button x:Name="BtnSaveReceipt" Content="Spara Kvitto                             " Canvas.Left="165" Canvas.Top="473" Width="88" RenderTransformOrigin="0.77,2.2" FontFamily="Myriad Pro" Background="Black" Foreground="White" BorderBrush="{x:Null}" Padding="5,1,1,1" Click="Button_Click_1" Height="21"/>
+                        <Button x:Name="btnUploadReceipt" Content="Bläddra" Canvas.Top="399" Width="88" FontFamily="Myriad Pro" Background="Black" Foreground="White" BorderBrush="{x:Null}" Click="btnUploadReceipt_Click" RenderTransformOrigin="0.566,-2.278" Canvas.Left="165"/>
                         <TextBox x:Name="tbReceiptFile" Height="23" TextWrapping="Wrap" Text="" Canvas.Top="374" Width="253" RenderTransformOrigin="0.67,0.409" Background="Black" Foreground="White"/>
                         <TextBox x:Name="tbSum" Height="23" TextWrapping="Wrap" Text="" Canvas.Top="448" Width="250" RenderTransformOrigin="0.5,0.5" Background="Black" Foreground="White" Canvas.Left="-1">
                             <TextBox.RenderTransform>
@@ -64,22 +64,22 @@
                                 </TransformGroup>
                             </TextBox.RenderTransform>
                         </TextBox>
-                        <Button x:Name="btnRemoveSelectedReceipt" Content="Ta bort kvitto                             " Canvas.Left="319" Canvas.Top="692" Width="93" RenderTransformOrigin="1.09,0.237" FontFamily="Myriad Pro" BorderBrush="White" Foreground="Black" Background="White" Click="btnRemoveSelectedReceipt_Click" Height="21"/>
+                        <Button x:Name="btnRemoveSelectedReceipt" Content="Ta bort kvitto                             " Canvas.Left="323" Canvas.Top="692" Width="89" RenderTransformOrigin="1.09,0.237" FontFamily="Myriad Pro" BorderBrush="White" Foreground="White" Background="Black" Click="btnRemoveSelectedReceipt_Click" Height="21"/>
                         <Label x:Name="lbReceipts" Content="Kvitton för resa" Canvas.Top="513" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16" RenderTransformOrigin="0.465,-1" Canvas.Left="-2"/>
                         <Label Content="Ange belopp för kvitto" Canvas.Top="423" Width="197" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
                         <Label Content="Välj ett kvitto                        " Canvas.Top="347" RenderTransformOrigin="0.537,0.874" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16" Width="174"/>
-                        <Button x:Name="btnSendReport" Content="Skicka in din rapport                          " Canvas.Left="534" Canvas.Top="753" Width="254" FontFamily="Myriad Pro" BorderBrush="White" Foreground="White" Height="56" Click="btnSendReport_Click" Padding="15,1,1,1" FontSize="24" FontWeight="Bold" Margin="0" Background="{x:Null}"/>
+                        <Button x:Name="btnSendReport" Content="Skicka in din rapport                          " Canvas.Left="499" Canvas.Top="766" Width="254" FontFamily="Myriad Pro" BorderBrush="White" Foreground="White" Height="43" Click="btnSendReport_Click" Padding="15,1,1,1" FontSize="24" FontWeight="Bold" Margin="0" Background="Black"/>
                         <Label Content="Maxbelopp för valt land                            " Canvas.Left="230" Canvas.Top="214" Width="200" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                        <Button x:Name="btnSaveStartCountry" Content="Spara land" Canvas.Left="142" Canvas.Top="315" Width="87" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Height="20" Click="btnSaveStartCountry_Click"/>
+                        <Button x:Name="btnSaveStartCountry" Content="Spara land" Canvas.Left="142" Canvas.Top="315" Width="87" FontFamily="Myriad Pro" Background="Black" Foreground="White" BorderBrush="{x:Null}" Height="20" Click="btnSaveStartCountry_Click"/>
                         <Label x:Name="lbMaxSumSpecificCountry" Content="" Canvas.Left="363" Canvas.Top="279" RenderTransformOrigin="1.556,2.432" Width="93"/>
                         <TextBox x:Name="tbNotes" Height="340" Canvas.Left="451" TextWrapping="Wrap" Text="" Canvas.Top="352" Width="298" Background="Black" Foreground="White"/>
                         <Label x:Name="lblNotes" Content="Fria anteckningar" Canvas.Left="448" Canvas.Top="325" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                        <Button x:Name="btnLoadNotes" Content="Ladda Anteckningar" Canvas.Left="602" Canvas.Top="697" Width="147" Foreground="Black" FontFamily="Myriad Pro" Background="White" BorderBrush="{x:Null}" Click="btnLoadNotes_Click"/>
-                        <Button x:Name="btnSaveNotes" Content="Spara Anteckningar" Canvas.Left="602" Canvas.Top="692" Width="147" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Click="btnSaveNotes_Click" Height="22"/>
-                        <Button x:Name="btnUpdateTotalDriven" Content="Lägg till" Canvas.Left="279" Canvas.Top="74" Width="127" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="10,1,1,1" Click="btnUpdateTotalDriven_Click" Height="23"/>
-                        <Button x:Name="btnDeleteCountry" Content="Ta Bort" Canvas.Left="1" Canvas.Top="315" Width="89" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Height="20" Click="btnDeleteCountry_Click"/>
+                        <Button x:Name="btnLoadNotes" Content="Ladda Anteckningar" Canvas.Left="602" Canvas.Top="697" Width="147" Foreground="White" FontFamily="Myriad Pro" Background="Black" BorderBrush="{x:Null}" Click="btnLoadNotes_Click" Height="17"/>
+                        <Button x:Name="btnSaveNotes" Content="Spara Anteckningar" Canvas.Left="602" Canvas.Top="692" Width="147" FontFamily="Myriad Pro" Background="Black" Foreground="White" BorderBrush="{x:Null}" Click="btnSaveNotes_Click" Height="22"/>
+                        <Button x:Name="btnUpdateTotalDriven" Content="Lägg till" Canvas.Left="279" Canvas.Top="74" Width="127" FontFamily="Myriad Pro" Background="Black" Foreground="White" BorderBrush="{x:Null}" Padding="10,1,1,1" Click="btnUpdateTotalDriven_Click" Height="23"/>
+                        <Button x:Name="btnDeleteCountry" Content="Ta Bort" Canvas.Left="1" Canvas.Top="315" Width="89" FontFamily="Myriad Pro" Background="Black" Foreground="White" BorderBrush="{x:Null}" Height="20" Click="btnDeleteCountry_Click"/>
                         <Label Content="            " Canvas.Left="236" Canvas.Top="241" Width="71" x:Name="LbTraktamente" Foreground="White" FontWeight="Bold" FontSize="16" Background="#FF5F93AC" Height="27"/>
-                        <Button x:Name="btnUpdateList" Content="Uppdatera Daglista" Canvas.Left="234" Canvas.Top="24" Width="172" Click="btnUpdateList_Click" Background="White" Foreground="Black" Height="23"/>
+                        <Button x:Name="btnUpdateList" Content="Uppdatera Daglista" Canvas.Left="234" Canvas.Top="24" Width="172" Click="btnUpdateList_Click" Background="Black" Foreground="White" Height="23"/>
                         <TextBox x:Name="TbTotalKm" Height="23" Canvas.Left="172" TextWrapping="Wrap" Text="0" Canvas.Top="102" Width="102" Foreground="White" Background="#FF4F6C89"/>
                         <Label x:Name="LbKm" Content="" Canvas.Left="98" Canvas.Top="71" Foreground="#FF51FF00"/>
                         <Label x:Name="LbTotalKm" Content="Sammanlagd sträcka" Canvas.Left="1" Canvas.Top="97" Foreground="White" FontSize="16" FontWeight="Bold"/>
@@ -97,10 +97,10 @@
                         <ListBox x:Name="listBoxReceipts" Height="155" Width="411" Canvas.Left="1" Canvas.Top="537" Foreground="White" Background="Black"/>
                         <Label x:Name="lbLoggedInAs" Content="Inloggad som: " Canvas.Left="467" Canvas.Top="10" RenderTransformOrigin="0.3,0.534" Foreground="White" FontSize="16"/>
                         <Label x:Name="lbLoggedInAsThisUser" Content="" Canvas.Left="585" Canvas.Top="15" Width="164" Foreground="White" FontSize="16" Background="#FF749ABF" Height="25"/>
-                        <Button x:Name="BtnLogIn" Content="Logga In" Canvas.Left="467" Canvas.Top="48" Width="143" Foreground="Black" Background="White" Click="BtnLogIn_Click" Height="25" TabIndex="1"/>
+                        <Button x:Name="BtnLogIn" Content="Logga In" Canvas.Left="467" Canvas.Top="48" Width="143" Foreground="White" Background="Black" Click="BtnLogIn_Click" Height="25" TabIndex="1"/>
                         <Button x:Name="btnLogOut" Content="Logga ut" Canvas.Left="563" Canvas.Top="25" Width="75" Background="White" Foreground="Black" Visibility="Hidden" Click="btnLogOut_Click"/>
-                        <Button x:Name="btnForgotPassword" Content="Glömt Lösenord" Canvas.Left="615" Canvas.Top="48" Width="138" Background="White" Foreground="Black" Height="25" TabIndex="2" Click="btnForgotPassword_Click"/>
-                        <Button x:Name="btnDeleteDraft" Content="Rensa Utkast" Height="30" Width="150" Canvas.Left="1" Canvas.Top="779" Background="White" Click="btnDeleteDraft_Click"/>
+                        <Button x:Name="btnForgotPassword" Content="Glömt Lösenord" Canvas.Left="615" Canvas.Top="48" Width="138" Background="Black" Foreground="White" Height="25" TabIndex="2" Click="btnForgotPassword_Click"/>
+                        <Button x:Name="btnDeleteDraft" Content="Rensa Utkast" Height="30" Width="150" Canvas.Left="1" Canvas.Top="779" Background="Black" Click="btnDeleteDraft_Click" Foreground="White"/>
 
 
                     </Canvas>
