--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -139,7 +139,7 @@
                         <Label x:Name="lbEmail" Content="E-post " Canvas.Left="456" Canvas.Top="155" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" RenderTransformOrigin="0.45,-0.379"/>
                         <TextBox x:Name="tbEmail" Height="23" Canvas.Left="580" TextWrapping="Wrap" Text="" Canvas.Top="161" Width="120" Background="Black" Foreground="White" SelectionBrush="#FF4375A6" TabIndex="5"/>
                         <Button x:Name="btnUpdateInfo" Content="Uppdatera" Canvas.Left="580" Canvas.Top="227" Width="120" Click="btnUpdateInfo_Click" Background="Black" Foreground="White" TabIndex="26"/>
-                        <Button x:Name="btnClear" Content="Rensa" Canvas.Left="456" Canvas.Top="248" Width="123" Background="Black" Foreground="White" TabIndex="27"/>
+                        <Button x:Name="btnClear" Content="Rensa" Canvas.Left="456" Canvas.Top="248" Width="123" Background="Black" Foreground="White" TabIndex="27" Click="btnClear_Click"/>
                         <Button x:Name="btnInactive" Content="Inaktivera" Canvas.Left="580" Canvas.Top="248" Width="120" Click="btnInactive_Click" Foreground="White" Background="Black" TabIndex="28"/>
                         <TextBox x:Name="tbPassword" Height="23" Canvas.Left="579" TextWrapping="Wrap" Text="" Canvas.Top="13" Width="121" Background="Black" Foreground="White" SelectionBrush="#FF4375A6" TabIndex="1"/>
                         <TextBox x:Name="tbUsername" Height="23" Canvas.Left="579" TextWrapping="Wrap" Text="" Width="121" Background="Black" Foreground="White" SelectionBrush="#FF4375A6" Canvas.Top="-16" TabIndex="1" IsTabStop="False"/>
@@ -218,6 +218,25 @@
                     </Grid>
                 </TabItem>
                 <TextBox x:Name="tbDoneOnTrip_Copy" Height="135" TextWrapping="Wrap" Text="" Width="300" Background="Black" Foreground="White" Margin="348,177,174,686"/>
+                <TabItem Header="Statistik&#xD;&#xA;" HorizontalAlignment="Left" Height="63" VerticalAlignment="Top" Width="127" Margin="-2.4,-2,-69.4,0">
+                    <Grid x:Name="Statistik" Background="#FFE5E5E5" Margin="0,-10,-0.4,9.6">
+                        <Label x:Name="lbTotalKilometer" Content="Antal Kilometer: " HorizontalAlignment="Left" Margin="10,675,0,0" VerticalAlignment="Top"/>
+                        <ComboBox x:Name="cbAllCountries" HorizontalAlignment="Left" Margin="543,246,0,0" VerticalAlignment="Top" Width="196"/>
+                        <ComboBox x:Name="cbAllUsers" HorizontalAlignment="Left" Margin="329,246,0,0" VerticalAlignment="Top" Width="187"/>
+                        <Label x:Name="lbSelectUser" Content="Välj Användare" HorizontalAlignment="Left" Margin="329,215,0,0" VerticalAlignment="Top"/>
+                        <Label x:Name="lbSelectCountry" Content="Välj Land" HorizontalAlignment="Left" Margin="543,215,0,0" VerticalAlignment="Top"/>
+                        <ListBox x:Name="lbReports" HorizontalAlignment="Left" Height="154" Margin="10,246,0,0" VerticalAlignment="Top" Width="291"/>
+                        <Label x:Name="lbSelectReport" Content="Välj Rapport" HorizontalAlignment="Left" Margin="10,215,0,0" VerticalAlignment="Top"/>
+                        <CheckBox x:Name="chbMonth" Content="Månad" HorizontalAlignment="Left" Margin="10,104,0,0" VerticalAlignment="Top"/>
+                        <CheckBox x:Name="chbQuater" Content="Kvartal" HorizontalAlignment="Left" Margin="104,104,0,0" VerticalAlignment="Top"/>
+                        <Label x:Name="lbChoseCheckBox" Content="Välj antingen månad eller kvartals översikt!" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top"/>
+                        <Label x:Name="lbCash" Content="Total Summa:" HorizontalAlignment="Left" Margin="10,706,0,0" VerticalAlignment="Top"/>
+                        <ListBox x:Name="lbUserStatisic" HorizontalAlignment="Left" Height="205" Margin="10,470,0,0" VerticalAlignment="Top" Width="291"/>
+                        <ListBox x:Name="lbCountriesStatistic" HorizontalAlignment="Left" Height="205" Margin="329,470,0,0" VerticalAlignment="Top" Width="291"/>
+                        <Label x:Name="lbUserStatistic" Content="Användare" HorizontalAlignment="Left" Margin="10,439,0,0" VerticalAlignment="Top"/>
+                        <Label x:Name="lbCountryStatistic" Content="Länder" HorizontalAlignment="Left" Margin="329,439,0,0" VerticalAlignment="Top"/>
+                    </Grid>
+                </TabItem>
             </TabControl>
         </Grid>
 
