--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -3,12 +3,12 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:scrumproject="clr-namespace:Scrumproject"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="Scrumproject.MainWindow"
-        Title="MainWindow" Height="694.703" Width="1290.493" Closing="Window_Closing_1">
-    <ScrollViewer Margin="0,0,-137,-40">
+        Title="MainWindow" Height="703.659" Width="1290.493" Closing="Window_Closing_1">
+    <ScrollViewer Margin="0,0,-28,-40">
         <Grid Margin="0,0,-8,0" HorizontalAlignment="Left" Width="652">
             <Grid.RowDefinitions>
-                <RowDefinition Height="0*"/>
-                <RowDefinition/>
+                <RowDefinition Height="136*"/>
+                <RowDefinition Height="827*"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="0*"/>
@@ -38,7 +38,7 @@
                         <GradientStop Color="#FFD1BBBB" Offset="1"/>
                     </LinearGradientBrush>
                 </TabControl.OpacityMask>
-                <TabItem Header="Rapportering" Margin="-2,0,-100,1" Background="#FFADBEE4" Foreground="Black" BorderBrush="{x:Null}" FontSize="14" FontWeight="Bold">
+                <TabItem Header="Rapportering" Margin="-2,0,-100,1" Background="#FFADBEE4" Foreground="Black" BorderBrush="{x:Null}" FontSize="14" FontWeight="Bold" FontFamily="Myriad Pro">
                     <Canvas Margin="13,28,9,140">
                         <DatePicker x:Name="dpStartDate" Canvas.Left="191" Canvas.Top="-9" Width="119" Height="27" Background="Black" IsTabStop="True" TabIndex="3"/>
                         <Label x:Name="lbStartDate" Content="Välj start/slutdatum                            " Canvas.Top="-9" Width="167" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="16" FontFamily="Myriad Pro"/>
@@ -103,7 +103,7 @@
 
                     </Canvas>
                 </TabItem>
-                <TabItem Header="Förskottsansökan" Margin="0,-1,-99,1" Background="#FF6C83B4" Foreground="Black" Width="200" Height="63" FontSize="14" FontWeight="Bold" HorizontalAlignment="Right" >
+                <TabItem Header="Förskottsansökan" Margin="0,-1,-99,1" Background="#FF6C83B4" Foreground="Black" Width="200" Height="63" FontSize="14" FontWeight="Bold" HorizontalAlignment="Right" FontFamily="Myriad Pro" BorderBrush="{x:Null}" >
                     <Canvas Width="818" Margin="2,10,2,70">
                         <Label x:Name="lbDagar_Copy" Content="Beskriv varför och vad du söker ersättning för" Canvas.Left="-206" Canvas.Top="10" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16"/>
                         <Label x:Name="lbWhatHaveIDoneToday_Copy" Content="Ange totalt belopp" Canvas.Left="-202" Canvas.Top="374" RenderTransformOrigin="0.659,0.185" Foreground="White" FontSize="16" FontWeight="Bold"/>
@@ -119,8 +119,8 @@
                         <TextBox x:Name="tbDescriptionPrepay" Height="328" TextWrapping="Wrap" Text="" Width="780" Background="Black" Foreground="White" TabIndex="4" Canvas.Left="-202" Canvas.Top="41"/>
                     </Canvas>
                 </TabItem>
-                <TabItem Header="Chef" HorizontalAlignment="Left" Width="211" Margin="99,-1,-99,1" Background="#FF7B9CE2" BorderBrush="{x:Null}" Foreground="Black" Cursor="None" Height="63" FontSize="14" FontWeight="Bold" >
-                    <Canvas Height="836" Margin="10,0,81,-9">
+                <TabItem Header="Chef" HorizontalAlignment="Left" Width="211" Margin="99,-1,-99,1" Background="#FF7B9CE2" BorderBrush="{x:Null}" Foreground="Black" Cursor="None" Height="63" FontSize="14" FontWeight="Bold" FontFamily="Myriad Pro" >
+                    <Canvas Margin="10,86,81,390">
                         <Label x:Name="lbUsers" Content="Användare" Canvas.Left="10" Width="100" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" RenderTransformOrigin="0.48,0.724" Canvas.Top="-74" />
                         <Label x:Name="lbUsernameLabel" Content="Användarnamn" Canvas.Left="503" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" Canvas.Top="-30"/>
                         <Label x:Name="lbPasswordLabel" Content="Lösenord" Canvas.Left="505" Width="93" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" Canvas.Top="-1"/>
@@ -192,7 +192,7 @@
 
                     </Canvas>
                 </TabItem>
-                <TabItem Header="Valutakonverterare&#xA;" HorizontalAlignment="Right" Height="63" VerticalAlignment="Bottom" Width="214" Margin="0,-1,-99,1" Padding="6,12,6,2" FontSize="14" FontWeight="Bold" BorderBrush="{x:Null}" Background="#FF96A9D3">
+                <TabItem Header="Valutakonverterare&#xA;" HorizontalAlignment="Right" Height="63" VerticalAlignment="Bottom" Width="214" Margin="0,-1,-99,1" Padding="6,12,6,2" FontSize="14" FontWeight="Bold" BorderBrush="{x:Null}" Background="#FF96A9D3" FontFamily="Myriad Pro">
                     <Grid x:Name="MainWindowCurrency" Margin="0">
                         <Grid.Background>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -224,24 +224,31 @@
                         <Label Content="&#xA;&#xA;" HorizontalAlignment="Left" Margin="282,51,0,0" VerticalAlignment="Top" x:Name="lbToCurrency" Height="34" Width="72" Foreground="White" Grid.ColumnSpan="2"/>
                     </Grid>
                 </TabItem>
-                <TextBox x:Name="tbDoneOnTrip_Copy" Height="135" TextWrapping="Wrap" Text="" Width="300" Background="Black" Foreground="White" Margin="348,177,174,686"/>
-                <TabItem Header="Statistik&#xD;&#xA;" HorizontalAlignment="Left" Height="63" VerticalAlignment="Top" Width="127" Margin="-2.4,-2,-69.4,0">
-                    <Grid x:Name="Statistik" Background="#FFE5E5E5" Margin="0,-10,-0.4,9.6">
-                        <Label x:Name="lbTotalKilometer" Content="Antal Kilometer: " HorizontalAlignment="Left" Margin="10,675,0,0" VerticalAlignment="Top"/>
-                        <ComboBox x:Name="cbAllCountries" HorizontalAlignment="Left" Margin="543,246,0,0" VerticalAlignment="Top" Width="196"/>
-                        <ComboBox x:Name="cbAllUsers" HorizontalAlignment="Left" Margin="329,246,0,0" VerticalAlignment="Top" Width="187"/>
-                        <Label x:Name="lbSelectUser" Content="Välj Användare" HorizontalAlignment="Left" Margin="329,215,0,0" VerticalAlignment="Top"/>
-                        <Label x:Name="lbSelectCountry" Content="Välj Land" HorizontalAlignment="Left" Margin="543,215,0,0" VerticalAlignment="Top"/>
-                        <ListBox x:Name="lbReports" HorizontalAlignment="Left" Height="154" Margin="10,246,0,0" VerticalAlignment="Top" Width="291"/>
-                        <Label x:Name="lbSelectReport" Content="Välj Rapport" HorizontalAlignment="Left" Margin="10,215,0,0" VerticalAlignment="Top"/>
-                        <CheckBox x:Name="chbMonth" Content="Månad" HorizontalAlignment="Left" Margin="10,104,0,0" VerticalAlignment="Top"/>
-                        <CheckBox x:Name="chbQuater" Content="Kvartal" HorizontalAlignment="Left" Margin="104,104,0,0" VerticalAlignment="Top"/>
-                        <Label x:Name="lbChoseCheckBox" Content="Välj antingen månad eller kvartals översikt!" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top"/>
-                        <Label x:Name="lbCash" Content="Total Summa:" HorizontalAlignment="Left" Margin="10,706,0,0" VerticalAlignment="Top"/>
-                        <ListBox x:Name="lbUserStatisic" HorizontalAlignment="Left" Height="205" Margin="10,470,0,0" VerticalAlignment="Top" Width="291"/>
-                        <ListBox x:Name="lbCountriesStatistic" HorizontalAlignment="Left" Height="205" Margin="329,470,0,0" VerticalAlignment="Top" Width="291"/>
-                        <Label x:Name="lbUserStatistic" Content="Användare" HorizontalAlignment="Left" Margin="10,439,0,0" VerticalAlignment="Top"/>
-                        <Label x:Name="lbCountryStatistic" Content="Länder" HorizontalAlignment="Left" Margin="329,439,0,0" VerticalAlignment="Top"/>
+                <TabItem Header="Statistik&#xD;&#xA;" HorizontalAlignment="Left" Height="61" VerticalAlignment="Top" Width="183" Margin="100,0,-100,0" FontFamily="Myriad Pro" FontSize="14" FontWeight="Bold" Background="#FF6688D1" BorderBrush="{x:Null}">
+                    <Grid x:Name="Statistik" Margin="0,-10,-0.4,9.6">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="539*"/>
+                            <ColumnDefinition Width="736*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.Background>
+                            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                <GradientStop Color="Black" Offset="0"/>
+                                <GradientStop Color="#FF6FB8EA" Offset="1"/>
+                            </LinearGradientBrush>
+                        </Grid.Background>
+                        <Label x:Name="lbTotalKilometer" Content="Antal Kilometer: " HorizontalAlignment="Left" Margin="43,521,0,0" VerticalAlignment="Top" Foreground="White"/>
+                        <ComboBox x:Name="cbAllCountries" HorizontalAlignment="Left" Margin="356.731,136,0,0" VerticalAlignment="Top" Width="196" Grid.Column="1"/>
+                        <ComboBox x:Name="cbAllUsers" HorizontalAlignment="Left" Margin="10.731,136,0,0" VerticalAlignment="Top" Width="168" Grid.Column="1"/>
+                        <Label x:Name="lbSelectUser" Content="Välj Användare" HorizontalAlignment="Left" Margin="427,136,0,0" VerticalAlignment="Top" Foreground="White"/>
+                        <Label x:Name="lbSelectCountry" Content="Välj Land" HorizontalAlignment="Left" Margin="261.731,132,0,0" VerticalAlignment="Top" Foreground="White" Width="90" Grid.Column="1"/>
+                        <ListBox x:Name="lbReports" HorizontalAlignment="Left" Height="335" Margin="43,168,0,0" VerticalAlignment="Top" Width="291" Background="Black" Foreground="White" BorderBrush="#FFC5C5C7"/>
+                        <Label x:Name="lbSelectReport" Content="Välj Rapport" HorizontalAlignment="Left" Margin="43,136,0,0" VerticalAlignment="Top" Foreground="White"/>
+                        <CheckBox x:Name="chbMonth" Content="Månad" HorizontalAlignment="Left" Margin="44,85,0,0" VerticalAlignment="Top" Foreground="White"/>
+                        <CheckBox x:Name="chbQuater" Content="Kvartal" HorizontalAlignment="Left" Margin="138,85,0,0" VerticalAlignment="Top" Foreground="White"/>
+                        <Label x:Name="lbChoseCheckBox" Content="Välj månads- eller kvartalsöversikt!" HorizontalAlignment="Left" Margin="44,41,0,0" VerticalAlignment="Top" Foreground="White"/>
+                        <Label x:Name="lbCash" Content="Total Summa:" HorizontalAlignment="Left" Margin="43,548,0,0" VerticalAlignment="Top" Foreground="White"/>
+                        <ListBox x:Name="lbUserStatisic" HorizontalAlignment="Left" Height="335" Margin="427,168,0,0" VerticalAlignment="Top" Width="291" Background="Black" Foreground="White" BorderBrush="#FFC5C5C7" Grid.ColumnSpan="2"/>
+                        <ListBox x:Name="lbCountriesStatistic" HorizontalAlignment="Left" Height="344" Margin="261.731,164,0,0" VerticalAlignment="Top" Width="291" Background="Black" Foreground="White" BorderBrush="#FFC5C5C7" Grid.Column="1"/>
                     </Grid>
                 </TabItem>
             </TabControl>
