--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -230,7 +230,7 @@
                 <TabItem Header="Statistik&#xD;&#xA;" HorizontalAlignment="Left" Height="63" VerticalAlignment="Top" Width="127" Margin="-2.4,-2,-69.4,0">
                     <Grid x:Name="Statistik" Background="#FFE5E5E5" Margin="0,-10,-0.4,9.6">
                         <Label x:Name="lbTotalKilometer" Content="Antal Kilometer: " HorizontalAlignment="Left" Margin="10,675,0,0" VerticalAlignment="Top"/>
-                        <ComboBox x:Name="cbAllCountries" HorizontalAlignment="Left" Margin="543,246,0,0" VerticalAlignment="Top" Width="196"/>
+                        <ComboBox x:Name="cbAllCountriesStatistics" HorizontalAlignment="Left" Margin="543,246,0,0" VerticalAlignment="Top" Width="196" SelectionChanged="cbAllCountriesStatistics_SelectionChanged" />
                         <ComboBox x:Name="cbAllUsers" HorizontalAlignment="Left" Margin="329,246,0,0" VerticalAlignment="Top" Width="187"/>
                         <Label x:Name="lbSelectUser" Content="Välj Användare" HorizontalAlignment="Left" Margin="329,215,0,0" VerticalAlignment="Top"/>
                         <Label x:Name="lbSelectCountry" Content="Välj Land" HorizontalAlignment="Left" Margin="543,215,0,0" VerticalAlignment="Top"/>
