--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -233,22 +233,22 @@
                         <Grid.Background>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                                 <GradientStop Color="Black" Offset="0"/>
-                                <GradientStop Color="#FF6FB8EA" Offset="1"/>
+                                <GradientStop Color="#FF6CB6E8" Offset="1"/>
                             </LinearGradientBrush>
                         </Grid.Background>
                         <Label x:Name="lbTotalKilometer" Content="Antal Kilometer: " HorizontalAlignment="Left" Margin="43,521,0,0" VerticalAlignment="Top" Foreground="White"/>
                         <ComboBox x:Name="cbAllCountries" HorizontalAlignment="Left" Margin="356.731,136,0,0" VerticalAlignment="Top" Width="196" Grid.Column="1"/>
                         <ComboBox x:Name="cbAllUsers" HorizontalAlignment="Left" Margin="10.731,136,0,0" VerticalAlignment="Top" Width="168" Grid.Column="1"/>
                         <Label x:Name="lbSelectUser" Content="Välj Användare" HorizontalAlignment="Left" Margin="427,136,0,0" VerticalAlignment="Top" Foreground="White"/>
-                        <Label x:Name="lbSelectCountry" Content="Välj Land" HorizontalAlignment="Left" Margin="261.731,132,0,0" VerticalAlignment="Top" Foreground="White" Width="90" Grid.Column="1"/>
-                        <ListBox x:Name="lbReports" HorizontalAlignment="Left" Height="335" Margin="43,168,0,0" VerticalAlignment="Top" Width="291" Background="Black" Foreground="White" BorderBrush="#FFC5C5C7"/>
+                        <Label x:Name="lbSelectCountry" Content="Välj Land" HorizontalAlignment="Left" Margin="262,133,0,0" VerticalAlignment="Top" Foreground="White" Width="90" Grid.Column="1"/>
+                        <ListBox x:Name="lbReports" HorizontalAlignment="Left" Height="335" Margin="43,168,0,0" VerticalAlignment="Top" Width="291" Background="#FF0C0B0B" Foreground="White" BorderBrush="#FFC5C5C7"/>
                         <Label x:Name="lbSelectReport" Content="Välj Rapport" HorizontalAlignment="Left" Margin="43,136,0,0" VerticalAlignment="Top" Foreground="White"/>
                         <CheckBox x:Name="chbMonth" Content="Månad" HorizontalAlignment="Left" Margin="44,85,0,0" VerticalAlignment="Top" Foreground="White"/>
                         <CheckBox x:Name="chbQuater" Content="Kvartal" HorizontalAlignment="Left" Margin="138,85,0,0" VerticalAlignment="Top" Foreground="White"/>
                         <Label x:Name="lbChoseCheckBox" Content="Välj månads- eller kvartalsöversikt!" HorizontalAlignment="Left" Margin="44,41,0,0" VerticalAlignment="Top" Foreground="White"/>
                         <Label x:Name="lbCash" Content="Total Summa:" HorizontalAlignment="Left" Margin="43,548,0,0" VerticalAlignment="Top" Foreground="White"/>
-                        <ListBox x:Name="lbUserStatisic" HorizontalAlignment="Left" Height="335" Margin="427,168,0,0" VerticalAlignment="Top" Width="291" Background="Black" Foreground="White" BorderBrush="#FFC5C5C7" Grid.ColumnSpan="2"/>
-                        <ListBox x:Name="lbCountriesStatistic" HorizontalAlignment="Left" Height="344" Margin="261.731,164,0,0" VerticalAlignment="Top" Width="291" Background="Black" Foreground="White" BorderBrush="#FFC5C5C7" Grid.Column="1"/>
+                        <ListBox x:Name="lbUserStatisic" HorizontalAlignment="Left" Height="335" Margin="427,168,0,0" VerticalAlignment="Top" Width="291" Background="#FF0C0B0B" Foreground="White" BorderBrush="#FFC5C5C7" Grid.ColumnSpan="2"/>
+                        <ListBox x:Name="lbCountriesStatistic" HorizontalAlignment="Left" Height="344" Margin="262,165,0,0" VerticalAlignment="Top" Width="291" Background="#FF0F0F0F" Foreground="White" BorderBrush="#FFC5C5C7" Grid.Column="1"/>
                     </Grid>
                 </TabItem>
             </TabControl>
