--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -186,7 +186,7 @@
                         <Button x:Name="btnLogOutChef" Content="Logga ut" Canvas.Left="337" Canvas.Top="-74" Width="75" RenderTransformOrigin="0.413,-0.391" Background="Black" Foreground="White" Click="btnLogOutChef_Click" Visibility="Hidden"/>
                         <Button x:Name="btnFillListWithUsersIAmBossFor" Content="Visa användare jag är auktoriserad att godkänna rapporter för" Canvas.Left="14" Canvas.Top="-44" Width="398" RenderTransformOrigin="0.413,-0.391" Background="Black" Foreground="White" FontSize="12" Click="btnFillListWithUsersIAmBossFor_Click" FontFamily="Myriad Pro"/>
                         <ListBox x:Name="lbShowReports" Height="205" Canvas.Left="14" Canvas.Top="239" Width="398" Background="Black" Foreground="White"/>
-                        <Button x:Name="btnSearchReport" Content="Sök" Canvas.Left="212" Canvas.Top="449" Width="36" RenderTransformOrigin="0.505,0.304" Background="Black" Foreground="White"/>
+                        <Button x:Name="btnSearchReport" Content="Sök" Canvas.Left="212" Canvas.Top="449" Width="36" RenderTransformOrigin="0.505,0.304" Background="Black" Foreground="White" Click="btnSearchReport_Click"/>
                         <TextBox x:Name="tbSearchReport" Height="23" Canvas.Left="14" TextWrapping="Wrap" Canvas.Top="449" Width="193" RenderTransformOrigin="0.454,0.148" Foreground="White" Background="Black"/>
                         <Button x:Name="btnLogInChef" Content="Logga in" Height="27" Width="75" Canvas.Left="336" Canvas.Top="-74" Background="Black" Foreground="White" Click="btnLogInChef_Click" FontFamily="Myriad Pro"/>
 
