--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -193,7 +193,7 @@
                         <Button x:Name="btnSearchReport" Content="Sök" Canvas.Left="212" Canvas.Top="449" Width="36" RenderTransformOrigin="0.505,0.304" Background="Black" Foreground="White" Click="btnSearchReport_Click"/>
                         <TextBox x:Name="tbSearchReport" Height="23" Canvas.Left="14" TextWrapping="Wrap" Canvas.Top="449" Width="193" RenderTransformOrigin="0.454,0.148" Foreground="White" Background="Black"/>
                         <Button x:Name="btnLogInChef" Content="Logga in" Height="27" Width="75" Canvas.Left="336" Canvas.Top="-74" Background="Black" Foreground="White" Click="btnLogInChef_Click" FontFamily="Myriad Pro"/>
-                        <CheckBox x:Name="cbShowPrepayments" Content="Förskottsansökningar" Canvas.Left="226" Canvas.Top="191" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" TabIndex="22"/>
+                        <CheckBox x:Name="cbShowPrepayments" Content="Förskottsansökningar" Canvas.Left="226" Canvas.Top="191" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" TabIndex="22" Checked="cbShowPrepayments_Checked"/>
 
                     </Canvas>
                 </TabItem>
